syntax = "proto3";
package ProtobufGen;
import "character.proto";

//请求进入房间
message ReqEnterRoom{ 
}

//下发进入房间
message ResEnterRoom{
    int32 resCode = 1; //返回码，0 成功 1 房间不存在 2 房间已满
    int32 seat = 2; //座次，从0开始，返回码为0时有效
    repeated RoomCharacterBean roomCharacterBeans = 3; //房间内玩家，返回码为0时有效
}

//请求退出房间
message ReqExitRoom{
    
}

//下发退出房间
message ResExitRoom{
    
}

//下发其他玩家进入房间
message ResOtherEnterRoom{
    RoomCharacterBean roomCharacterBean = 1; //房间角色
}

//下发其他玩家退出房间
message ResOtherExitRoom{
    int32 seat = 1; //座次
}

//请求准备
message ReqReady{
    
}

//下发准备
message ResReady{
    int32 seat = 1; //座次
}

//请求取消准备
message ReqQuitReady{
    
}

//下发取消准备
message ResQuitReady{
    int32 seat = 1; //座次
}

//请求快捷语音
message ReqQuickVoice{
    int32 cfgId = 1; //配置id
}

//下发快捷语音
message ResQuickVoice{
    int32 cfgId = 1; //配置id
}

//下发下注信息
message ResBet{
    int32 multiple = 1; //倍数
    int32 beanNum = 2; //欢乐豆数量
}

//房间角色bean
message RoomCharacterBean{
    int32 seat = 1; //座次
    bool isReady = 2; //是否准备
    CharacterBean characterBean = 3; //角色bean
}
